# ComicsViewer

./: .gitignore  CMakeLists.txt  ComicsViewer.icns  ComicsViewer.pro  ComicsViewer.rc  LICENSE  README.md  comicmodel.cpp  comicmodel.h  i18n.qrc  main.cpp  main.qml  pageitem.cpp  pageitem.h
i18n/: ComicsViewer_ja.qm  ComicsViewer_ja.ts
